--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "cypress": "^14.3.2",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "echarts-liquidfill": "^3.1.0",
