--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.16",
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0",
