--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "echarts-liquidfill": "^3.1.0",
-    "firebase": "^11.3.0",
+    "firebase": "^11.6.1",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.16",
+    "vitest": "^3.1.2",
+    "web-vitals": "^2.1.4",
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
@@ -30,6 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -51,8 +56,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   }
 }
